fixed bugs on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,9 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 body {
@@ -135,7 +138,13 @@ body {
   font-feature-settings: 'rlig' 1, 'calt' 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
+  height: 100%;
+  height: 100dvh;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 /* Typography */
